@@ -21,6 +21,7 @@
 <FONT SIZE="5"><STRONG>Download:</STRONG></FONT><BR>
 <UL><A HREF="http://sourceforge.net/project/showfiles.php?group_id=67789">iTerm 0.8.2</A><IMG src="new.gif"> The latest iTerm release<BR>
 <A HREF="http://cvs.sourceforge.net/cvstarballs/iterm-cvsroot.tar.bz2">Nightly Tarball</A><BR>
+<A HREF="http://iterm.sourceforge.net/iTerm-latest-cvs.zip">Recent binary build from CVS</A><BR>
 </UL>
 
 <FONT SIZE="5"><STRONG>Installation:</STRONG></FONT><BR>
