@@ -1,3 +1,9 @@
+2006-03-15  fabian
+
+    * Added in locks to eliminate the bugs related to opening/closing sessions.
+    * Removed NSConnection once again.
+    * A (not-so-elegant) fix for occassional tab label refreshing problem.
+    
 2006-03-03  ujwal
 	
 	* Fixed VT100Screen:-setNewLine to redraw whole screen if buffer is full
